updated api with delete, bumpy, added tests
