# backend/swagger_server/models/__init__.py
@@ -6,12 +6,11 @@ from __future__ import absolute_import
 from swagger_server.models.api_response import ApiResponse
 from swagger_server.models.body import Body
 from swagger_server.models.bumpy_point import BumpyPoint
-from swagger_server.models.fix_my_street_point import FixMyStreetPoint
 from swagger_server.models.full_processed_trip import FullProcessedTrip
-from swagger_server.models.path import Path
-from swagger_server.models.path_segments import PathSegments
 from swagger_server.models.processed_trip import ProcessedTrip
 from swagger_server.models.processed_trip_elevation import ProcessedTripElevation
 from swagger_server.models.processed_trip_speed import ProcessedTripSpeed
+from swagger_server.models.track import Track
+from swagger_server.models.track_segments import TrackSegments
 from swagger_server.models.trip import Trip
 from swagger_server.models.trip_gnss_data import TripGnssData
